# telegram_service_goloo

./: .dockerignore  .env  .env.example  ADMIN_WEBHOOK_ACTIONS.md  API_EXAMPLES.md  AUTO_WEBHOOK_IMPLEMENTATION.md  AUTO_WEBHOOK_SETUP.md  BOT_TYPES_GUIDE.md  COMPLETE_SYSTEM_DIAGRAM.md  CSRF_CONFIGURATION.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP_SUMMARY.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  FACTORY_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PROXY_FIX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SYSTEM_DIAGRAM.md  db.sqlite3  docker-compose.yml  docker-rebuild.sh  docker-test.sh  main.py  pyproject.toml  start-docker.sh  test_setup.py
.github/workflows/: docker-test.yml
Bot/: FACTORY_PATTERN.md  README.md  admin.py  apps.py  flow_examples.json  models.py  signals.py  views.py
Bot/management/commands/: setup_bot_webhook.py
Bot/migrations/: 0001_initial.py  0002_botuser_state_data_botuser_user_state_and_more.py  0003_telegrambot_auto_setup_webhook.py  0004_telegrambot_after_phone_number_text.py
Bot/services/: __init__.py  base.py  custom_bot.py  factory.py  registration_bot.py  simple_bot.py  support_bot.py  survey_bot.py
MAIN/: asgi.py  settings.py  urls.py  wsgi.py
